# rGraphicsLibrary

./: .gitignore  CMakeLists.txt  scene.xml  sceneScateredData.xml
Base/: Assert.cpp  Assert.h  CMakeLists.txt  Defines.h  Factory.cpp  Factory.h  Object.cpp  Object.h  XMLObject.h  XMLObject.hpp  XMLObjectHandler.cpp  XMLObjectHandler.h
Engine/: BasicGraphicsEngine.cpp  BasicGraphicsEngine.h  CMakeLists.txt  CameraHandler.h  DrawableObject.h  Engine.cpp  Engine.h  EventHandler.cpp  EventHandler.h  GLFWEngine.cpp  GLFWEngine.h  GraphicsEngine.h  TrackballCameraHandler.cpp  TrackballCameraHandler.h
Examples/: CMakeLists.txt
Examples/2DFractals/: 2DFractals.cpp  CMakeLists.txt
Examples/CSG/: CMakeLists.txt  CSGExample.cpp
Examples/Cloth/: CMakeLists.txt  Cloth.cpp  main.cpp
Examples/EngineExample/: CMakeLists.txt  EngineExample.cpp
Examples/FluidRenderer/: CMakeLists.txt  main.cpp
Examples/FractalsExamples/: CMakeLists.txt  FractalsExamples.cpp
Examples/GMRES/: CMakeLists.txt  main_gmres.cpp
Examples/GameOfLife/: CMakeLists.txt  main.cpp
Examples/IMExample/: CMakeLists.txt  IMExample.cpp
Examples/KDTree/: CMakeLists.txt  KDTree.cpp  KDTreeExample.cpp
Examples/LeastSquarePlane/: CMakeLists.txt  LeastSquarePlane.cpp
Examples/LevelSet/: CMakeLists.txt  LevelSetExample.cpp  main.cpp
Examples/LevelSet/glsl/: levelset.frag
Examples/Mesh/: CMakeLists.txt  MeshExample.cpp  main.cpp
Examples/OpenEXR/: CMakeLists.txt
Examples/OpenEXR/EnvironmentLighting/: CMakeLists.txt  main.cpp
Examples/OpenEXR/SimpleViewer/: CMakeLists.txt  main.cpp
Examples/PointRenderer/: CMakeLists.txt  PointRenderer.cpp
Examples/RBFExample/: CMakeLists.txt  RBFExample.cpp
Examples/RBFFastEvalExample/: CMakeLists.txt  RBFFastEvalExample.cpp
Examples/RBFSurfaceExtraction/: CMakeLists.txt  RBFSurfaceExtraction.cpp
Examples/ScatteredPoints/: CMakeLists.txt  ScatteredPoints.cpp
Examples/Shaders/: CMakeLists.txt  main.cpp
Examples/Test/: CMakeLists.txt  Test.cpp
Examples/UltrasoundSurfaceExtaction/: CMakeLists.txt  UltrasoundSurfaceExtaction.cpp
Examples/UltrasoundSurfacePoints/: CMakeLists.txt  UltrasoundSurfacePoints.cpp
Examples/XMLExample/: CMakeLists.txt  XMLExample.cpp
Examples/rEngineScene/: CMakeLists.txt  rEngineScene.cpp
FluidSimulator/: CMakeLists.txt  EulerianFluid.cpp  EulerianFluid.h
Fractals/: CMakeLists.txt  KochSurface.cpp  KochSurface.h  MengerSponge.cpp  MengerSponge.h  SierpinskiPyramid.cpp  SierpinskiPyramid.h  SierpinskiTetrahedron.cpp  SierpinskiTetrahedron.h
Geometry/: BoundingVolume.cpp  BoundingVolume.h  CMakeLists.txt  Clusterer.cpp  Clusterer.h  KDNode.hpp  KDTree.h  KDTree.hpp  Mesh.cpp  Mesh.h  SurfacePoint.cpp  SurfacePoint.h  kdtree.cpp  kdtree.h
Geometry/BoundingGeometry/: BoundingVolume.cpp  BoundingVolume.h  CMakeLists.txt
Geometry/CSG/: CMakeLists.txt  CSG.cpp  CSG.h  CSGCache.cpp  CSGCache.h  ImplicitFunction.cpp  ImplicitFunction.h  MarchingTetrahedra.cpp  MarchingTetrahedra.h  PointCloudInterpolation.cpp  PointCloudInterpolation.h
Geometry/Clustering/: CMakeLists.txt  Clusterer.cpp  Clusterer.h
Geometry/KDTree/: CMakeLists.txt  KDIterator.hpp  KDNode.hpp  KDTree.h  KDTree.hpp
Geometry/Mesh/: CMakeLists.txt  Face.cpp  Face.h  IndexedMesh.cpp  IndexedMesh.h  Mesh.h  Polygon.cpp  Polygon.h  Quad.cpp  Quad.h  Triangle.cpp  Triangle.h  Vertex.cpp  Vertex.h
IMHelpers/: CMakeLists.txt  HoughPoint.h  IMHelpers.cpp  IMHelpers.h
Image/: BMPWriter.cpp  BMPWriter.h  CMakeLists.txt  Image.cpp  Image.h
Math/: CMakeLists.txt  Interpolator.h  MatrixInversion.h  Plane.cpp  Plane.h  Polynomial.h  Polynomial.hpp
OpenEXRHelpers/: CMakeLists.txt  LightExtractor.cpp  LightExtractor.h  OpenEXRIncludes.h  Reader.cpp  Reader.h  Texture.cpp  Texture.h  TypeBuffer.cpp  TypeBuffer.h  TypeBuffer.hpp
OpenGLHelpers/: AttribPusher.cpp  AttribPusher.h  CMakeLists.txt  ColorCube.cpp  ColorCube.h  FBO.cpp  FBO.h  Light.cpp  Light.h  MatrixPusher.cpp  MatrixPusher.h  OpenGLInfo.cpp  OpenGLInfo.h  Shader.cpp  Shader.h
Physics/: CMakeLists.txt  SpringDamper.cpp  SpringDamper.h  SpringDamperSystem.cpp  SpringDamperSystem.h  SpringParticle.cpp  SpringParticle.h
RBF/: CMakeLists.txt  FastEvaluationRBF.cpp  FastEvaluationRBF.h  FastEvaluationRBF.hpp  FastFittingRBF.hpp  HFittingRBF.hpp  RBF.cpp  RBF.h  RBFHelper.cpp  RBFHelper.h  StandardFittingRBF.hpp
SuperEngine/: CMakeLists.txt  MeshRenderer.cpp  MeshRenderer.h  SuperEngine.cpp  SuperEngine.h  SuperGraphicsEngine.cpp  SuperGraphicsEngine.h
Tools/: CMakeLists.txt
UnitTests/: BiLinearInterploator.tests.h  BoundingAABB.tests.h  BoundingSphere.tests.h  CMakeLists.txt  Field3D.tests.h  LinearInterploator.tests.h  TriLinearInterploator.tests.h  Triangle.tests.h  main_unitTests.cpp  mesh.tests.h
Util/: CMakeLists.txt  Color.cpp  Color.h  Date.cpp  Date.h  Directory.cpp  Directory.h  HTML.cpp  HTML.h  Logger.cpp  Logger.h  Macros.h  Random.cpp  Random.h  StopClock.cpp  StopClock.h  TmpPointer.h
Volume/: CMakeLists.txt  Field3D.h  Field3D.hpp  LevelSet.cpp  LevelSet.h  LevelSet.hpp  ScalarField.cpp  ScalarField.h  ScalarField.hpp  UltrasoundSurfacePointExtractor.cpp  UltrasoundSurfacePointExtractor.h  UltrasoundVariationalClassification.cpp  UltrasoundVariationalClassification.h  VectorField.cpp  VectorField.h  VectorField.hpp
glew/: CMakeLists.txt  (+3 more)
glsl/: CMakeLists.txt  EnvironmentLighting.frag  EnvironmentLighting.rgl  EnvironmentLighting.vert  MeshRenderer.frag  MeshRenderer.vert  cart2sphere.rgl  fluid.frag  fluid.vert  levelset.frag  levelset.vert  lighting.rgl  math.rgl  pi.rgl  rFrag.rgl  rMesh.frag  rMesh.vert  rScene.frag  rSceneCombine.frag  rSceneCombine.vert  rVert.rgl  shaders.frag  shaders.vert  simpleOEXRViewer.frag  simpleOEXRViewer.vert  superFrag.rgl  superVert.rgl
rEngine/: CMakeLists.txt  CSGReader.cpp  CSGReader.h  Camera.cpp  Camera.h  FBO.cpp  FBO.h  IDObject.h  Material.cpp  Material.h  MeshRenderer.cpp  MeshRenderer.h  Scene.cpp  Scene.h  Texture.cpp  Texture.h  Viewport.cpp  Viewport.h  rEngine.cpp  rEngine.h  rObject.cpp  rObject.h  rWindow.cpp  rWindow.h
(+81 files in other folders)
